--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Montserrat:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
+
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +16,7 @@ body,
 .app {
     height: 100%;
     width: 100%;
-    font-family: "DM Sans", sans-serif;
-    @apply text-gray-500;
+    font-family: "Montserrat", sans-serif;
+    @apply text-blue-3;
 }
+
